# jjson

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
include/: jjson.hpp
src/: jjson.cpp
test/: CMakeLists.txt  server.json
test/src/: jjsontests.cpp
